# aether

./: .env.example  LICENSE  README.md  pyproject.toml  runner.py
aether/: __init__.py  const.py
aether/api/: __init__.py  gateway.py
aether/api/events/: __init__.py  state.py
aether/api/resources/: __init__.py  abc.py  user.py
aether/core/: __init__.py  client.py  scheduler.py
aether/core/utils/: __init__.py  eql.py  hook.py  json.py  safety.py
docs/: conf.py  index.rst
